fixed layout not fitting on smaller screen sizes.

--- a/landing-page.css
+++ b/landing-page.css
@@ -10,10 +10,17 @@ body {
     font-family: "Roboto", sans-serif;
     background-color: #1f2937;
     display: flex;
+    justify-content: center;
+    align-items: center;
     flex-direction: column;
+    margin: 5%;
+    gap: 1rem;
+    width: fit-content;
+    height: auto;
 }
 
 ul, li {
+    
     margin: 0;
     padding: 0;
     list-style: none;
@@ -23,18 +30,19 @@ ul, li {
 .header-container {
     background-color: #1f2937;
     display: flex;
+    flex-shrink: 0;
     flex-direction: row;
     justify-content: space-around;
     align-items: end;
     margin: 10px 0;
-
+    gap: 5rem;
 }
 
 .header-links {
     display: flex;
     flex-direction: row;
-    flex-shrink: 0;
-    gap: 2rem;
+    /* flex-shrink: 0; */
+    gap: 1rem;
     color: #f9faf8;
     font-style: italic;
     font-weight: 300;
@@ -50,21 +58,22 @@ ul, li {
     gap: 3rem ;
     color: #f9faf8;
     display: flex;
-    justify-content: center;
+    justify-content: space-evenly;
     align-items: center;
     flex-direction: row;
-    margin: 10% 16%;
+    margin: 1% 1%;
     background-color: #1f2937;
     box-sizing: border-box;
-    width: auto;
-    height: 100%;
+    object-fit: cover;
+    width: 100%;
+    height: auto;
 }
 
 .me {
     display: flex;
     justify-content: center;
-    width: 100%;
-    max-width: 200px;
+    align-items: center;
+    width: 50%;
     object-fit: cover;
     height: auto;
     border-radius: 10px;
@@ -72,9 +81,11 @@ ul, li {
 
 .content {
     gap: 1rem;
-    width: 100%;
+    width: 50%;
     height: auto;
+    object-fit: cover;
     display: flex;
+    justify-content: center;
     flex-direction: column;
 
 }
